[gd_scene load_steps=1 format=3 uid="uid://dql4rkolhiq2r"]

[ext_resource type="Script" path="res://scenes/InventoryPanel.gd" id="1"]

[node name="InventoryPanel" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(1, 1, 1, 1)

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.08, 1)

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="InventoryHeader" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/InventoryHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"

[node name="CloseInventoryButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/InventoryHeader"]
layout_mode = 2
text = "Close"

[node name="EquippedLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Equipped"

[node name="EquippedList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
allow_reselect = true
item_count = 0

[node name="EquipmentLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Equipments"

[node name="EquipmentList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
allow_reselect = true
item_count = 0

[node name="ItemsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Items"

[node name="ItemsList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
allow_reselect = true
item_count = 0
